Code improvements. Add section list. Add view pager to main screen.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="submit">Submit</string>
     <string name="please_enter_price">Please enter price</string>
     <string name="please_enter_category_name">Please enter category name</string>
+    <string name="arrow_icon">Arrow icon</string>
 </resources>
