Add refresh statistics list on adding new item to DB. Add empty list view.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="please_enter_price">Please enter price</string>
     <string name="please_enter_category_name">Please enter category name</string>
     <string name="arrow_icon">Arrow icon</string>
+    <string name="no_costs_info_collected">No costs info collected</string>
 </resources>
